# cpp-delegates

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example_1.cc  example_main.cc
include/: call_helper.hpp  delegate.hpp  signal.hpp
include/delegates/: delegates.hpp  delegates_conf.h  i_delegate.h
include/delegates/detail/: call_helper.hpp  delegate_args_impl.hpp  delegate_impl.hpp  delegate_result_impl.hpp  factory.hpp  signal.hpp  tuple_runtime.hpp
tests/: CMakeLists.txt  delegates_tests.cc  delegates_tests.h  delegates_tests_main.cc
tests/utils/: cprintf.c  cprintf.h  mem_checker.cc  mem_checker.h  platform_detect.h  resource_checker.hpp
